--- a/portal/src/main/resources/ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/ApplicationResources_en_US.properties
@@ -261,40 +261,40 @@ camposPass.obligatorios = Enter user and password.
 
 caracteres.prohibidos = Illegal caractures cannot be used. Only alphanumeric, spaces, hyphens, low hyphens and points.
 
-cargar.observatorio.vacio                    = Back
-cargar.rastreos.vacio                        = Back
-cargar.semilla.actualizables.title           = Updated
-cargar.semilla.errors.title                  = Errors
-cargar.semilla.inalterables.title            = Unchanged
-cargar.semilla.nuevas.title                  = New
-cargar.semilla.observatorio.acronimo         = Acronym
-cargar.semilla.observatorio.activa           = Active
-cargar.semilla.observatorio.ambito           = Scope
-cargar.semilla.observatorio.buscar.total     = Number of results
-cargar.semilla.observatorio.categoria        = Segment
-cargar.semilla.observatorio.clave            = Grouped by
-cargar.semilla.observatorio.complejidad      = Complexity
-cargar.semilla.observatorio.dependencia      = Dependency
-cargar.semilla.observatorio.directorio       = Directory
-cargar.semilla.observatorio.eliminada        = Removed
-cargar.semilla.observatorio.eliminar         = Remove
-cargar.semilla.observatorio.errores          = Errors
-cargar.semilla.observatorio.etiquetas        = Tags
-cargar.semilla.observatorio.exportar.todo    = Export
-cargar.semilla.observatorio.exportar.todo.xml= Export .xml
-cargar.semilla.observatorio.exportar.todo.xlsx= Export .xlsx
-cargar.semilla.observatorio.file             = Seeds file
-cargar.semilla.observatorio.importar.todo    = Import
-cargar.semilla.observatorio.new.value        = New value
-cargar.semilla.observatorio.nombre           = Name
-cargar.semilla.observatorio.nueva.semilla    = New seed
-cargar.semilla.observatorio.observaciones    = Comments
-cargar.semilla.observatorio.operaciones      = Operations
-cargar.semilla.observatorio.total            = <strong>{0}</strong> seeds total to be updated
-cargar.semilla.observatorio.total.errores    = Cannot load <strong>{0}</strong> seeds because of errors
-cargar.semilla.observatorio.total.nuevas     = A total <strong>{0}</strong> seeds will be created
-cargar.semilla.observatorio.total.sincambios = A total of <strong>{0}</strong> seeds will not be altered.
-cargar.semilla.observatorio.urls             = URLs
+cargar.observatorio.vacio                      = Back
+cargar.rastreos.vacio                          = Back
+cargar.semilla.actualizables.title             = Updated
+cargar.semilla.errors.title                    = Errors
+cargar.semilla.inalterables.title              = Unchanged
+cargar.semilla.nuevas.title                    = New
+cargar.semilla.observatorio.acronimo           = Acronym
+cargar.semilla.observatorio.activa             = Active
+cargar.semilla.observatorio.ambito             = Scope
+cargar.semilla.observatorio.buscar.total       = Number of results
+cargar.semilla.observatorio.categoria          = Segment
+cargar.semilla.observatorio.clave              = Grouped by
+cargar.semilla.observatorio.complejidad        = Complexity
+cargar.semilla.observatorio.dependencia        = Dependency
+cargar.semilla.observatorio.directorio         = Directory
+cargar.semilla.observatorio.eliminada          = Removed
+cargar.semilla.observatorio.eliminar           = Remove
+cargar.semilla.observatorio.errores            = Errors
+cargar.semilla.observatorio.etiquetas          = Tags
+cargar.semilla.observatorio.exportar.todo      = Export
+cargar.semilla.observatorio.exportar.todo.xlsx = Export .xlsx
+cargar.semilla.observatorio.exportar.todo.xml  = Export .xml
+cargar.semilla.observatorio.file               = Seeds file
+cargar.semilla.observatorio.importar.todo      = Import
+cargar.semilla.observatorio.new.value          = New value
+cargar.semilla.observatorio.nombre             = Name
+cargar.semilla.observatorio.nueva.semilla      = New seed
+cargar.semilla.observatorio.observaciones      = Comments
+cargar.semilla.observatorio.operaciones        = Operations
+cargar.semilla.observatorio.total              = <strong>{0}</strong> seeds total to be updated
+cargar.semilla.observatorio.total.errores      = Cannot load <strong>{0}</strong> seeds because of errors
+cargar.semilla.observatorio.total.nuevas       = A total <strong>{0}</strong> seeds will be created
+cargar.semilla.observatorio.total.sincambios   = A total of <strong>{0}</strong> seeds will not be altered.
+cargar.semilla.observatorio.urls               = URLs
 
 cartucho.duplicado     = Already existing cartridge.
 cartucho.invalido      = Invalid format, valid format is tar.ggest
@@ -745,6 +745,7 @@ gestion.dependencias.observatorio           = Management of Observatory Offices
 gestion.dependencias.observatorio.titulo    = Management of Observatory Offices
 gestion.etiquetas.observatorio.titulo       = Label Management of the Observatory
 gestion.plantillas.observatorio.titulo      = Observatory Templates Management
+gestion.ranges.observatorio.titulo          = Gesti\u00F3n de rangos de comparaci\u00F3n de evoluci\u00F3n a nivel de sitio web
 gestion.reducciontablas.observatorio.titulo = Reduction of Observatory Tables
 gestion.reducirtablas.observatorio.titulo   = Reduction of Observatory Tables
 gestion.resultados.observatorio             = Observatory results
@@ -801,8 +802,8 @@ indice.cartuchos.vacio                             = There are no cartridges.
 indice.categorias.acciones                         = Actions
 indice.categorias.categoria                        = Segment
 indice.categorias.categorias                       = List of Segments
-indice.categorias.download.xml                     = Descargar las semillas de este segmento en formato XML
 indice.categorias.download.xlsx                    = Descargar las semillas de este segmento en formato .xlsx
+indice.categorias.download.xml                     = Descargar las semillas de este segmento en formato XML
 indice.categorias.edit                             = Edit
 indice.categorias.gestion.categorias               = Management of Segments
 indice.categorias.img.editar.alt                   = Edit Category
@@ -1303,6 +1304,7 @@ migas.nuevo.usuario.cliente                              = New customer user
 migas.nuevo.usuario.observatorio                         = New Observatory User
 migas.observatorio                                       = Observatories
 migas.plantillas.observatorio                            = Templates
+migas.ranges.observatorio                                = Rangos
 migas.rangoIp                                            = IP Range
 migas.rastreo                                            = Tracking
 migas.rastreo.editar.semilla                             = Edit seed
@@ -1516,6 +1518,9 @@ modificar.usuario.password                         = Password:
 modificar.usuario.tipo.usuario                     = Type of Usufruct Group:
 modificar.usuario.title                            = Edit User
 modificar.usuario.usuario                          = User:
+
+new.ranges.observatorio       = New range
+new.ranges.observatorio.title = RASTREADOR WEB - Nuevo rango
 
 no = NO
 
