--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -347,12 +347,15 @@ chart.warnings.bs                            = Advertencias
 
 client.accounts.info = Estos son las cuentas clientes a las que est\u00E1 suscrito:
 
-colname.acronym       = Acr\u00F3nimo
-colname.active        = Activa
-colname.analysis.type = Tipo de an\u00E1lisis
-colname.depthReport   = Informe en profundidad
-colname.province      = Provincia
-colname.send.auto     = Env\u00EDo autom\u00E1tico
+colname.acronym            = Acr\u00F3nimo
+colname.active             = Activa
+colname.analysis.type      = Tipo de an\u00E1lisis
+colname.depthReport        = Informe en profundidad
+colname.max.value          = Valor superior
+colname.max.value.operator = Operador valor superior
+colname.min.value          = Valor inferior
+colname.province           = Provincia
+colname.send.auto          = Env\u00EDo autom\u00E1tico
 
 conectividad.form.title            = Comprobaci\u00F3n de URL
 conectividad.form.url              = URL
@@ -665,6 +668,7 @@ generar.informes.observatorio.title         = Generar informes PDFs del observat
 gestion.certificado                         = Gesti\u00F3n de Certificados
 gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del Observatorio
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
+gestion.ranges.observatorio.titulo          = Gesti\u00F3n de rangos de comparaci\u00F3n de evoluci\u00F3n a nivel de sitio web
 gestion.resultados.observatorio             = Resultados Observatorio
 gestion.resultados.observatorio.ejecuciones = Listado de Ejecuciones del Observatorio
 gestion.semillas                            = Gesti\u00F3n de Semillas
@@ -814,6 +818,7 @@ indice.rastreo.realizado.semilla.asociada          = Semilla asociada
 indice.rastreo.realizado.usuario                   = Usuario
 indice.rastreo.realizado.vacio                     = Por el momento no se ha lanzado ning\u00FAn rastreo para el rastreo seleccionado.
 indice.rastreo.resultados.rastreos.realizados      = Resultados del rastreo
+indice.rastreo.send.database                       = Env\u00EDo de resultados por email
 indice.rastreo.test.rastreo                        = Probar rastreo
 indice.rastreo.vacio                               = No hay rastreos disponibles
 indice.rastreo.ver.codigo.analizado                = Ver c\u00F3digo fuente analizado
@@ -935,6 +940,8 @@ mensaje.error.nombre.dependencia.duplicado                    = Nombre de depend
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
 mensaje.error.nombre.etiqueta.duplicado                       = Nombre de etiqueta ya existente
 mensaje.error.nombre.etiqueta.obligatorio                     = El nombre de la etiqueta es obligatorio
+mensaje.error.nombre.range.duplicado                          = Nombre de rango duplicado
+mensaje.error.nombre.range.obligatorio                        = Nombre de rango obligatorio
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -973,6 +980,7 @@ mensaje.exito.observatorio.realizado.eliminado                = Ejecuci\u00F3n d
 mensaje.exito.observatorio.resultados.exportados              = Los resultados del Observatorio han sido exportados con \u00E9xito.
 mensaje.exito.pass.admin.cambiado                             = Password del usuario {0} cambiado.
 mensaje.exito.pass.usuario.cambiado                           = Password del Usuario cambiado.
+mensaje.exito.range.generada                                  = Rango guardado con \u00E9xito
 mensaje.exito.rastreo.editado                                 = Rastreo Editado con exito. 
 mensaje.exito.rastreo.eliminado                               = Rastreo Eliminado con exito. 
 mensaje.exito.rastreo.insertado                               = Rastreo Insertado con exito. 
@@ -1009,6 +1017,7 @@ menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
 menu.config.observatory.title                 = Observatorio
 menu.config.plantillas.title                  = Plantillas asociadas a semillas
+menu.config.ranges.title                      = Rangos
 menu.config.reducirtablas.title               = Reduccion tablas observatorio
 
 menuSemillas.gestion.semillas  = Gesti\u00F3n de Semillas
@@ -1200,6 +1209,7 @@ migas.nuevo.usuario                                      = Nuevo Usuario
 migas.nuevo.usuario.cliente                              = Nuevo Usuario Cliente
 migas.nuevo.usuario.observatorio                         = Nuevo Usuario Observatorio
 migas.observatorio                                       = Observatorios
+migas.ranges.observatorio                                = Rangos
 migas.rangoIp                                            = Rango IP
 migas.rastreo                                            = Rastreos
 migas.rastreo.editar.semilla                             = Editar Semilla
@@ -1372,6 +1382,9 @@ modificar.usuario.password                         = Password:
 modificar.usuario.tipo.usuario                     = Tipo de Usuaro:
 modificar.usuario.title                            = Editar Usuario
 modificar.usuario.usuario                          = Usuario:
+
+new.ranges.observatorio       = Nuevo rango
+new.ranges.observatorio.title = RASTREADOR WEB - Nuevo rango
 
 no = NO
 
@@ -2794,6 +2807,12 @@ problem.line   = L\u00EDnea
 
 puertos.vacios = Debe rellenar al menos el primer puerto.
 
+range.observatory.modal.delete.title = \u00BFEst\u00E1 seguro de que desea eliminar el rango 
+range.observatory.modal.new.title    = Nuevo rango
+range.observatory.new.max            = Valor superior
+range.observatory.new.min            = Valor inferior
+range.observatory.new.name           = Nombre
+
 rango.hilos  = El n\u00FAmero de hilos debe estar entre 0 y 200.
 rango.ip     = Rango de Ip: 0-255.
 rango.puerto = Puerto fuera de rango(0-65535)
@@ -2878,6 +2897,7 @@ resultado.observatorio.rastreo.realizado.informe.agregado        = Informe agreg
 resultado.observatorio.rastreo.realizado.informes.individuales   = Informes individuales
 resultado.observatorio.rastreo.realizado.puntuacion              = Puntuaci\u00F3n
 resultado.observatorio.rastreo.realizado.resultados              = Resultados individuales
+resultado.observatorio.rastreo.realizado.send                    = Enviar
 resultado.observatorio.rastreo.realizado.vacio                   = Por el momento no hay resultados para la semilla seleccionada.
 resultado.observatorio.relanzar.ejecucion.rastreo                = Relanzar Ejecuci\u00F3n Semilla
 resultado.observatorio.ver.rastreos.realizados                   = Ver Resultados de Rastreos de Semilla
@@ -3096,8 +3116,9 @@ semilla.vacia                  = No hay semillas disponibles.
 
 semillas.observatorio.title = Asociar Semillas a Observatorio
 
-send.numHilos    = N\u00FAmero de hilos
-send.numRastreos = N\u00FAmero de rastreos
+send.numHilos                  = N\u00FAmero de hilos
+send.numRastreos               = N\u00FAmero de rastreos
+send.results.observatory.title = Configuraci\u00F3n del env\u00EDo autom\u00E1tico de resultados
 
 servicio.diagnostico.fecha.fin    = Fecha fin (incluida)
 servicio.diagnostico.fecha.inicio = Fecha inicio (incluida)
