--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -378,6 +378,10 @@ colname.go                 = Ir
 colname.historic           = Hist\u00F3rico
 colname.id                 = ID
 colname.level              = Nivel de accesibilidad
+colname.max.value          = Valor superior
+colname.max.value.operator = Operador valor superior
+colname.min.value          = Valor inferior
+colname.min.value.operator = Operador valor inferiorOperador valor inferior
 colname.name               = Nombre
 colname.observations       = Observaciones
 colname.official           = OficialOficial
@@ -752,6 +756,7 @@ gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del O
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
 gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
+gestion.ranges.observatorio.titulo          = Gesti\u00F3n de rangos de comparaci\u00F3n de evoluci\u00F3n a nivel de sitio web
 gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
 gestion.reducirtablas.observatorio.titulo   = Reducci\u00F3n de Tablas del Observatorio
 gestion.resultados.observatorio             = Resultados Observatorio
@@ -912,6 +917,7 @@ indice.rastreo.realizado.semilla.asociada          = Semilla asociada
 indice.rastreo.realizado.usuario                   = Usuario
 indice.rastreo.realizado.vacio                     = Por el momento no se ha lanzado ning\u00FAn rastreo para el rastreo seleccionado.
 indice.rastreo.resultados.rastreos.realizados      = Resultados del rastreo
+indice.rastreo.send.database                       = Env\u00EDo de resultados por email
 indice.rastreo.test.rastreo                        = Probar rastreo
 indice.rastreo.vacio                               = No hay rastreos disponibles
 indice.rastreo.ver.codigo.analizado                = Ver c\u00F3digo fuente analizado
@@ -1038,6 +1044,8 @@ mensaje.error.nombre.etiqueta.duplicado                       = Nombre de etique
 mensaje.error.nombre.etiqueta.obligatorio                     = El nombre de la etiqueta es obligatorio
 mensaje.error.nombre.plantilla.duplicado                      = Ya existe una plantilla con el mismo nombnre
 mensaje.error.nombre.plantilla.obligatorio                    = El nombre de la plantilla es obligatorio
+mensaje.error.nombre.range.duplicado                          = Nombre de rango duplicado
+mensaje.error.nombre.range.obligatorio                        = Nombre de rango obligatorio
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -1078,6 +1086,7 @@ mensaje.exito.pass.admin.cambiado                             = Password del usu
 mensaje.exito.pass.usuario.cambiado                           = Password del Usuario cambiado.
 mensaje.exito.plantilla.eliminada                             = Plantilla eliminada correctamente
 mensaje.exito.plantilla.generada                              = Plantilla guardada correctamente
+mensaje.exito.range.generada                                  = Rango guardado con \u00E9xito
 mensaje.exito.rastreo.editado                                 = Rastreo Editado con exito. 
 mensaje.exito.rastreo.eliminado                               = Rastreo Eliminado con exito. 
 mensaje.exito.rastreo.insertado                               = Rastreo Insertado con exito. 
@@ -1115,6 +1124,7 @@ menu.config.observatory.seed.title            = Semillas asociadas al Observator
 menu.config.observatory.title                 = Observatorio
 menu.config.plantillas                        = Plantillas
 menu.config.plantillas.title                  = Plantillas asociadas a semillas
+menu.config.ranges.title                      = Ranfos
 menu.config.reducirtablas                     = Reduccion de tablas
 menu.config.reducirtablas.title               = Reduccion tablas observatorio
 
@@ -1310,6 +1320,7 @@ migas.nuevo.usuario.cliente                              = Nuevo Usuario Cliente
 migas.nuevo.usuario.observatorio                         = Nuevo Usuario Observatorio
 migas.observatorio                                       = Observatorios
 migas.plantillas.observatorio                            = Plantillas
+migas.ranges.observatorio                                = Rangos
 migas.rangoIp                                            = Rango IP
 migas.rastreo                                            = Rastreos
 migas.rastreo.editar.semilla                             = Editar Semilla
@@ -1524,6 +1535,9 @@ modificar.usuario.password                         = Password:
 modificar.usuario.tipo.usuario                     = Tipo de Usuaro:
 modificar.usuario.title                            = Editar Usuario
 modificar.usuario.usuario                          = Usuario:
+
+new.ranges.observatorio       = Nuevo rango
+new.ranges.observatorio.title = RASTREADOR WEB - Nuevo rango
 
 no = NO
 
@@ -3083,6 +3097,12 @@ problem.line   = L\u00EDnea
 
 puertos.vacios = Debe rellenar al menos el primer puerto.
 
+range.observatory.modal.delete.title = \u00BFEst\u00E1 seguro de que desea eliminar el rango 
+range.observatory.modal.new.title    = Nuevo rango
+range.observatory.new.max            = Valor superior
+range.observatory.new.min            = Valor inferior
+range.observatory.new.name           = Nombre
+
 rango.hilos  = El n\u00FAmero de hilos debe estar entre 0 y 200.
 rango.ip     = Rango de Ip: 0-255.
 rango.puerto = Puerto fuera de rango(0-65535)
@@ -3182,6 +3202,7 @@ resultado.observatorio.rastreo.realizado.informe.agregado        = Informe agreg
 resultado.observatorio.rastreo.realizado.informes.individuales   = Informes individuales
 resultado.observatorio.rastreo.realizado.puntuacion              = Puntuaci\u00F3n
 resultado.observatorio.rastreo.realizado.resultados              = Resultados individuales
+resultado.observatorio.rastreo.realizado.send                    = Enviar
 resultado.observatorio.rastreo.realizado.vacio                   = Por el momento no hay resultados para la semilla seleccionada.
 resultado.observatorio.relanzar.ejecucion.rastreo                = Relanzar Ejecuci\u00F3n Semilla
 resultado.observatorio.ver.rastreos.realizados                   = Ver Resultados de Rastreos de Semilla
@@ -3405,8 +3426,9 @@ semilla.vacia                  = No hay semillas disponibles.
 
 semillas.observatorio.title = Asociar Semillas a Observatorio
 
-send.numHilos    = N\u00FAmero de hilos
-send.numRastreos = N\u00FAmero de rastreos
+send.numHilos                  = N\u00FAmero de hilos
+send.numRastreos               = N\u00FAmero de rastreos
+send.results.observatory.title = Configuraci\u00F3n del env\u00EDo autom\u00E1tico de resultados
 
 servicio.diagnostico.estadisticas.amplitud         = Amplitud
 servicio.diagnostico.estadisticas.avg              = Tiempo medio de los an\u00E1lisis
