WIP Send mails to URA with observatory results

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -3146,6 +3146,8 @@ report.config.graficas.filter.title                  = Gr\u00E1ficas opcionales 
 report.config.observatorios.filter.title             = Observatorios para incluir en el evolutivo 
 report.config.observatorios.filter.title.global      = Observatorios para incluir en el informe 
 report.config.observatorios.templates.button.new     = Nuevo rango
+report.config.observatorios.templates.info           = Se pueden usar las siguientes marcas de sustituci\u00F3n:
+report.config.observatorios.templates.info.list      = <ul><li style="list-style: disc;margin-left: 2%;">[oficiosa]--texto--[/oficiosa]: el texto entre estas marcas s\u00F3lo se usar\u00E1 si la URA es oficiosa</li> <li style="list-style: disc;margin-left: 2%;">[oficial]--texto--[/oficial]: el texto entre estas marcas s\u00F3lo se usar\u00E1 si la URA es oficial</li> <li style="list-style: disc;margin-left: 2%;">_ura_name_: Nombre de la URA</li> <li style="list-style: disc;margin-left: 2%;">_ura_custom_text_: Texto personalizado (en el siguiente paso)</li></ul>
 report.config.observatorios.templates.title          = Configuraci\u00F3n de rangos y plantillas
 report.config.optional.1                             = Resultados globales. Modalidad de verificaci\u00F3n
 report.config.optional.2                             = Resultados globales. Puntuaci\u00F3n media por aspectos
