WIP Send results by email

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -3231,6 +3231,8 @@ resultado.observatorio.rastreo.realizado.send                    = Enviar
 resultado.observatorio.rastreo.realizado.send.confirm.info       = Una vez guardados los cambios se proceder\u00E1 al env\u00EDo de los resultados a aquellas URA que tengan configurado el env\u00EDo autom\u00E1tico.
 resultado.observatorio.rastreo.realizado.send.info               = \u00BFEst\u00E1 seguro de que desea generar los resultados del Observatorio?
 resultado.observatorio.rastreo.realizado.send.info2              = Una vez guardados los cambios se calcular\u00E1n los rangos de mejora o empoeramiento de las URAs del observatorio para poder personalizar los corres electr\u00F3nicos. Estre proceso puede tardar unos minutos.
+resultado.observatorio.rastreo.realizado.send.info3              = Una vez guardados los cambios se calcular\u00E1n los rangos de mejora o empoeramiento de las URAs del observatorio para poder personalizar los corres electr\u00F3nicos. Estre proceso puede tardar unos minutos.
+resultado.observatorio.rastreo.realizado.send.subject            = Asunto del correo electr\u00F3nico
 resultado.observatorio.rastreo.realizado.vacio                   = Por el momento no hay resultados para la semilla seleccionada.
 resultado.observatorio.relanzar.ejecucion.rastreo                = Relanzar Ejecuci\u00F3n Semilla
 resultado.observatorio.ver.rastreos.realizados                   = Ver Resultados de Rastreos de Semilla
@@ -3454,6 +3456,8 @@ semilla.vacia                  = No hay semillas disponibles.
 
 semillas.observatorio.title = Asociar Semillas a Observatorio
 
+send.mail.async.info           = Se est\u00E1n enviado los resultados por email
+send.mail.async.title          = Env\u00EDo resultados por correo electr\u00F3nico
 send.numHilos                  = N\u00FAmero de hilos
 send.numRastreos               = N\u00FAmero de rastreos
 send.results.observatory.title = Configuraci\u00F3n del env\u00EDo autom\u00E1tico de resultados
