Updated dependencies by import xlsx file #223

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -437,7 +437,9 @@ date.format = (dd/mm/yyyy)
 
 datos.acceso = Datos de acceso
 
-de.text                                  = de {0} sitios web
+de.text                                        = de {0} sitios web
+
+dependency.import.error.official.to.unofficial = Se est\u00E1 intentanto importar una entidad oficiosa con el mismo nombre que una existente oficial
 
 detalle.semilla.observatorio.complejidad = Complejidad
 detalle.semilla.observatorio.nombre      = Nombre Semilla
@@ -707,6 +709,8 @@ img.calendario.alt = Calendario
 img.delete.term    = Eliminar t\u00E9rmino
 img.edit.term      = Editar t\u00E9rmino
 
+importar.dependencias.error.title             = Errores
+importar.dependencias.error.title.total       = Un total de <strong>{0}</strong> dependencias contienen errores
 importar.dependencias.inalterable.title       = Inalteradas
 importar.dependencias.inalterable.title.total = Un total de <strong>{0}</strong> dependencias no se van a modificar
 importar.dependencias.new.title               = Nuevas
