--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -364,6 +364,7 @@ colname.range              = Rango
 colname.send.auto          = Env\u00EDo autom\u00E1tico
 colname.send.date          = Fecha de env\u00EDo
 colname.template           = Plantilla de correo
+colname.type               = Tipo
 
 conectividad.form.title            = Comprobaci\u00F3n de URL
 conectividad.form.url              = URL
@@ -678,6 +679,8 @@ generar.informes.observatorio.title         = Generar informes PDFs del observat
 gestion.certificado                         = Gesti\u00F3n de Certificados
 gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del Observatorio
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
+gestion.plantillas.observatorio.info.ira    = Desde esta secci\u00F3n se pueden gentionar las plantillas ods y xlsx de los <strong>Informe Revision Profunidad</strong> que pueden ser generados por el Servicio de Diagn\u00F3stico. Para ello es necesario crear si no existe una plantilla del tipo <em>ods</em> y otra del tipo <em>xlsx</em>. Estos tipos s\u00F3lo se usar\u00E1n en la generaci\u00F3n de los <em>Informe Revision Profunidad</em> y <strong>s\u00F3lo se permite la creaci\u00F3n de una plantilla de cada uno de estos tipos</strong>.
+gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
 gestion.ranges.observatorio.titulo          = Gesti\u00F3n de rangos de comparaci\u00F3n de evoluci\u00F3n a nivel de sitio web
 gestion.resultados.observatorio             = Resultados Observatorio
 gestion.resultados.observatorio.ejecuciones = Listado de Ejecuciones del Observatorio
@@ -953,6 +956,7 @@ maximo.rastreos = El n\u00FAmero m\u00E1ximo de rastreos del cartucho ha sido su
 mensaje.certificado.ya.registrado                             = El certificado digital ya estaba registrado o la p\u00E1gina es accesible a trav\u00E9s del puerto HTTP normal.
 mensaje.error.campos.complejidad.numericos                    = Profundidad y amplitud deben ser n\u00FAmeros positivos
 mensaje.error.cartucho                                        = Se ha creado la cuenta cliente pero han fallado la creaci\u00F3n de los rastreos: {0}
+mensaje.error.documento.plantilla.formato                     = Formato no va\u013Aido. S\u00F3lo de admiten ficheros en formato .odt, .ods o .xlsx
 mensaje.error.fichero.corrupto                                = El fichero al que est\u00E1 intentando acceder no est\u00E1 disponible o est\u00E1 corrupto. Por favor, proceda a subir un nuevo fichero.
 mensaje.error.generico                                        = No se ha podido realizar la acci\u00F3n seleccionada. Si el problema persiste, pongase en contacto con el administrador del sitio.
 mensaje.error.no.login                                        = No se ha identificado en el sistema, o su sesi\u00F3n ha caducado. Por favor, identif\u00EDquese en el formulario que se muestra a continuaci\u00F3n.
@@ -964,6 +968,7 @@ mensaje.error.nombre.dependencia.duplicado                    = Nombre de depend
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
 mensaje.error.nombre.etiqueta.duplicado                       = Nombre de etiqueta ya existente
 mensaje.error.nombre.etiqueta.obligatorio                     = El nombre de la etiqueta es obligatorio
+mensaje.error.nombre.plantilla.duplicado                      = Ya existe una plantilla con el mismo nombnre
 mensaje.error.nombre.range.duplicado                          = Nombre de rango duplicado
 mensaje.error.nombre.range.obligatorio                        = Nombre de rango obligatorio
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
@@ -971,6 +976,7 @@ mensaje.error.numMax.hilos                                    = El n\u00FAmero m
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
 mensaje.error.permisos                                        = No tiene permisos para realizar la acci\u00F3n seleccionada
 mensaje.error.tMaxEspera.superado                             = Tiempo m\u00E1ximo de espera superado. Es posible que la acci\u00F3n no se haya realizado correctamente. Compruebe el estado de los rastreos en el listado y en caso de error, contacte con el Administrador.
+mensaje.error.type.plantilla.duplicado                        = Ya existe una plantilla del tipo ods o xlsx. De estos formatos s\u00F3lo se puede almacenar una plantilla <em>Informe Revision Profunidad</em>
 mensaje.exito.cartucho.desinstalado                           = Cartucho Desinstalado con exito. 
 mensaje.exito.cartucho.eliminado                              = Cartucho Eliminado con exito. 
 mensaje.exito.cartucho.instalado                              = Cartucho Instalado con exito. 
@@ -1461,6 +1467,7 @@ nueva.etiqueta.observatorio.distribucion   = Distribucion
 nueva.etiqueta.observatorio.nombre         = Nombre de la etiqueta
 nueva.etiqueta.observatorio.recurrencia    = Recurrencia
 nueva.etiqueta.observatorio.tematica       = Tematica
+nueva.plantilla.observatorio.fichero       = Fichero
 nueva.range.observatorio.modal.title       = A\u00F1adir nuevo rango
 nueva.semilla.google                       = Nueva semilla
 nueva.semilla.google.info                  = (Se extraer\u00E1n 10 resultados por cada p\u00E1gina)
