IRA tamplates from interface Redmine #760

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -762,7 +762,7 @@ gestion.complejidades.observatorio.titulo   = Gesti\u00F3n de Complejidades del 
 gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del Observatorio
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
-gestion.plantillas.observatorio.info.ira    = Desde esta secci\u00F3n se pueden gentionar las plantillas ods y xlsx de los <strong>Informe Revision Profunidad</strong> que pueden ser generados por el Servicio de Diagn\u00F3stico. Para ello es necesario crear si no existe una plantilla del tipo <em>ods</em> y otra del tipo <em>xlsx</em>. Estos tipos s\u00F3lo se usar\u00E1n en la generaci\u00F3n de los <em>Informe Revision Profunidad</em> y <strong>s\u00F3lo se permite la creaci\u00F3n de una plantilla de cada uno de estos tipos</strong>.
+gestion.plantillas.observatorio.info.ira    = Actualmente desde esta secci\u00F3n se pueden gestionar las plantillas ods y xlsx de los <strong>Informe Revision Profunidad</strong> que pueden ser generados por el Servicio de Diagn\u00F3stico. Para ello es necesario crear (si no existe) una plantilla del tipo <em>ods</em> y otra del tipo <em>xlsx</em>. Estos tipos s\u00F3lo se usar\u00E1n en la generaci\u00F3n de los <em>Informe Revision Profunidad</em> y <strong>s\u00F3lo se permite la creaci\u00F3n de una plantilla de cada uno de estos tipos</strong>.
 gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
 gestion.ranges.observatorio.titulo          = Gesti\u00F3n de rangos de comparaci\u00F3n de evoluci\u00F3n a nivel de sitio web
 gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
