--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -354,10 +354,10 @@ colname.analysis.type      = Tipo de an\u00E1lisis
 colname.custom.message     = P\u00E1rrafo personalizado
 colname.depthReport        = Informe en profundidad
 colname.email              = Email
-colname.max.value          = Valor 2
-colname.max.value.operator = Operador 2
-colname.min.value          = Valor 1
-colname.min.value.operator = Operador 1
+colname.max.value          = Valor superior
+colname.max.value.operator = Operador superior
+colname.min.value          = Valor inferior
+colname.min.value.operator = Operador inferior
 colname.official           = Oficial
 colname.province           = Provincia
 colname.range              = Rango
@@ -975,6 +975,7 @@ mensaje.error.nombre.semilla.duplicado                        = Nombre de Semill
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
 mensaje.error.permisos                                        = No tiene permisos para realizar la acci\u00F3n seleccionada
+mensaje.error.range.format                                    = Los rangos se definen de la siguiente manera: (valor inferior) (<;<=;nada) x (<;<=;nada) (valor superior). Es necesario especificar al menos un par valor-operador (inferior o superior)
 mensaje.error.tMaxEspera.superado                             = Tiempo m\u00E1ximo de espera superado. Es posible que la acci\u00F3n no se haya realizado correctamente. Compruebe el estado de los rastreos en el listado y en caso de error, contacte con el Administrador.
 mensaje.error.type.plantilla.duplicado                        = Ya existe una plantilla del tipo ods o xlsx. De estos formatos s\u00F3lo se puede almacenar una plantilla <em>Informe Revision Profunidad</em>
 mensaje.exito.cartucho.desinstalado                           = Cartucho Desinstalado con exito. 
@@ -1414,8 +1415,10 @@ modificar.usuario.tipo.usuario                     = Tipo de Usuaro:
 modificar.usuario.title                            = Editar Usuario
 modificar.usuario.usuario                          = Usuario:
 
-new.ranges.observatorio       = Nuevo rango
-new.ranges.observatorio.title = RASTREADOR WEB - Nuevo rango
+new.ranges.observatorio            = Nuevo rango
+new.ranges.observatorio.info       = Los rangos se definen de la siguiente manera:\n(valor inferior) (<;<=;nada) x (<;<=;nada) (valor superior)
+new.ranges.observatorio.info.modal = Indicar los valores y los operadores del rango teniendo en cuenta que el rango se define de la siguiente manera:\n(valor inferior) (<;<=;nada) x (<;<=;nada) (valor superior)
+new.ranges.observatorio.title      = RASTREADOR WEB - Nuevo rango
 
 no = NO
 
@@ -2842,8 +2845,8 @@ puertos.vacios = Debe rellenar al menos el primer puerto.
 
 range.observatory.modal.delete.title = \u00BFEst\u00E1 seguro de que desea eliminar el rango 
 range.observatory.modal.new.title    = Nuevo rango
-range.observatory.new.max            = Valor 2
-range.observatory.new.min            = Valor 1
+range.observatory.new.max            = Valor superior
+range.observatory.new.min            = Valor inferior
 range.observatory.new.name           = Nombre
 range.observatory.new.template       = Plantilla de correo
 
