--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -48,6 +48,9 @@ analyse.problems     = Problemas:
 analyse.warning      = Advertencia:
 analyse.warnings     = Advertencias:
 
+analysis.type.source          = C\u00F3digo fuente
+analysis.type.source.multiple = C\u00F3digo fuente m\u00FAltiple
+
 anchor.4.1       = 41Anchor
 anchor.4.3       = 43Anchor
 anchor.PMA       = pmaAnchor
