CCO option on send results by mail
View send results by mail

Save config without send in step two of send results

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -371,11 +371,13 @@ colname.analysis.type      = Tipo de an\u00E1lisis
 colname.classification     = Clasificaci\u00F3n
 colname.complex            = Complejidad
 colname.custom.message     = P\u00E1rrafo personalizado
+colname.date               = Fecha
 colname.dependecies        = Dependencias
 colname.depth              = Profundidad
 colname.directory          = Directorio
 colname.download           = Descargar
 colname.email              = Email
+colname.error              = Error
 colname.etiqeutas          = Etiquetas
 colname.go                 = Ir
 colname.historic           = Hist\u00F3rico
@@ -403,6 +405,7 @@ colname.scope              = \u00C1mbito
 colname.segment            = Segment
 colname.send.auto          = Env\u00EDo autom\u00E1tico
 colname.send.date          = Fecha de env\u00EDo
+colname.sended             = Enviado
 colname.status             = Estado
 colname.template           = Plantilla de correo
 colname.total.url          = URLs analizidas
@@ -941,6 +944,7 @@ indice.rastreo.send.database.confirm.select.custom.option1 = S\u00ED, para todas
 indice.rastreo.send.database.confirm.select.custom.option2 = S\u00ED, s\u00F3lo para algunas entidades
 indice.rastreo.send.database.confirm.select.custom.option3 = No
 indice.rastreo.send.database.confirm.select.custom.text    = \u00BFQuiere a\u00F1adir p\u00E1rrafos personalizados?
+indice.rastreo.send.database.results                       = Resultados de los env\u00EDos
 indice.rastreo.test.rastreo                                = Probar rastreo
 indice.rastreo.vacio                                       = No hay rastreos disponibles
 indice.rastreo.ver.codigo.analizado                        = Ver c\u00F3digo fuente analizado
@@ -3239,6 +3243,7 @@ resultado.observatorio.rastreo.realizado.informes.individuales   = Informes indi
 resultado.observatorio.rastreo.realizado.puntuacion              = Puntuaci\u00F3n
 resultado.observatorio.rastreo.realizado.resultados              = Resultados individuales
 resultado.observatorio.rastreo.realizado.send                    = Enviar
+resultado.observatorio.rastreo.realizado.send.carbon.copy        = Correo para enviar copia oculta
 resultado.observatorio.rastreo.realizado.send.confirm.info       = Una vez guardados los cambios se proceder\u00E1 al env\u00EDo de los resultados a aquellas URA que tengan configurado el env\u00EDo autom\u00E1tico.
 resultado.observatorio.rastreo.realizado.send.info               = \u00BFEst\u00E1 seguro de que desea generar los resultados del Observatorio?
 resultado.observatorio.rastreo.realizado.send.info2              = Una vez guardados los cambios se calcular\u00E1n los rangos de mejora o empoeramiento de las URAs del observatorio para poder personalizar los corres electr\u00F3nicos. Estre proceso puede tardar unos minutos.
@@ -3467,11 +3472,15 @@ semilla.vacia                  = No hay semillas disponibles.
 
 semillas.observatorio.title = Asociar Semillas a Observatorio
 
-send.mail.async.info           = Se est\u00E1n enviado los resultados por email
-send.mail.async.title          = Env\u00EDo resultados por correo electr\u00F3nico
-send.numHilos                  = N\u00FAmero de hilos
-send.numRastreos               = N\u00FAmero de rastreos
-send.results.observatory.title = Configuraci\u00F3n del env\u00EDo autom\u00E1tico de resultados
+send.mail.async.info                   = Se est\u00E1n enviado los resultados por email. Cuando termine el proceso se enviar\u00E1 un correo notificando la finalizaci\u00F3n del proceso e indicando los posibles errores que se hayan producido.
+send.mail.async.title                  = Env\u00EDo resultados por correo electr\u00F3nico
+send.mail.end.process.mail.body        = El env\u00EDo de los resultados ha finalizado para el observatorio {0}.
+send.mail.end.process.mail.notSend     = No se han podido enviar los resultados a las siguientes URAs
+send.mail.end.process.mail.subject     = Env\u00EDo de resultados completado
+send.numHilos                          = N\u00FAmero de hilos
+send.numRastreos                       = N\u00FAmero de rastreos
+send.results.observatory.title         = Configuraci\u00F3n del env\u00EDo autom\u00E1tico de resultados
+send.results.observatory.title.results = Resultados del env\u00EDo autom\u00E1tico de resultados
 
 servicio.diagnostico.estadisticas.amplitud         = Amplitud
 servicio.diagnostico.estadisticas.avg              = Tiempo medio de los an\u00E1lisis
