Async annex export

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -233,8 +233,10 @@ boton.buscar                   = Buscar
 boton.cancelar                 = Cancelar
 boton.crear.cuenta.cliente     = Crear Cuenta Cliente
 boton.crear.observatorio       = Crear Observatorio
+boton.descargar                = Descargar
 boton.editar                   = Editar
 boton.enviar                   = Enviar
+boton.enviar.async             = Generar y enviar por email
 boton.evolucion                = Evoluci\u00F3n
 boton.evolucion.alt            = Evoluci\u00F3n
 boton.exportar                 = Exportar
