--- a/portal/src/main/resources/__ApplicationResources_es_CA.properties
+++ b/portal/src/main/resources/__ApplicationResources_es_CA.properties
@@ -1029,6 +1029,7 @@ mensaje.error.nombre.etiqueta.duplicado                       = Nombre de etique
 mensaje.error.nombre.etiqueta.obligatorio                     = El nombre de la etiqueta es obligatorio
 mensaje.error.nombre.plantilla.duplicado                      = Ya existe una plantilla con el mismo nombnre
 mensaje.error.nombre.plantilla.obligatorio                    = El nombre de la plantilla es obligatorio
+mensaje.error.plantilla.obligatorio                           = La plantilla es obligatoria
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
