[#3184] Individual PDF files - DISTORTED EVOLUTION - Change of Recurrence

--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -3122,6 +3122,7 @@ pdf.accessibility.summary.table.evolution.improve               = improve
 pdf.accessibility.summary.table.evolution.worse                 = worse
 pdf.accessibility.summary.table.pm                              = Website Average Score
 pdf.accessibility.summary.table.result                          = Result
+pdf.accessibility.summary.table.nodata                          = No data
 pdf.accessibility.title                                         = WEB ACCESSIBILITY\nREPORT
 pdf.accessibility.title.basic.service                           = WEB ACCESSIBILITY\nREPORT
 pdf.accessibility.title.basic.service.2                         = SIMPLIFIED MONITORING\nUNE-EN301549:2019
