First version of mixed diagnostics services: urls and code

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -2924,6 +2924,7 @@ pdf.accessibility.cover.notice.2                                = El resumen de 
 pdf.accessibility.cover.type.source                             = C\u00D3DIGO FUENTE\n{0}
 pdf.accessibility.cover.type.url                                = SITIO WEB\n{0}
 pdf.accessibility.cover.type.url.list                           = LISTA DE P\u00C1GINAS
+pdf.accessibility.cover.type.mix                                = LISTA DE P\u00C1GINAS Y C\u00D3DIGO FUENTE
 pdf.accessibility.date                                          = Fecha:
 pdf.accessibility.domain                                        = Dominio:
 pdf.accessibility.entity                                        = Entidad:
