--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -2900,6 +2900,7 @@ pdf.accessibility.cover.notice.2                                = The summary of
 pdf.accessibility.cover.type.source                             = SOURCE CODE\n{0}
 pdf.accessibility.cover.type.url                                = WEB SITE\n{0}
 pdf.accessibility.cover.type.url.list                           = PAGE LIST
+pdf.accessibility.cover.type.mix                                = PAGE LIST AND SOURCE CODE
 pdf.accessibility.date                                          = Date:
 pdf.accessibility.domain                                        = Domain:
 pdf.accessibility.entity                                        = Entity:
