--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -175,6 +175,7 @@ application.title.resultados         = RASTREADOR WEB - Resultados Rastreo
 application.title.semillas           = RASTREADOR WEB - Semillas
 application.title.termino.categorias = RASTREADOR WEB - T\u00E9rminos
 application.title.usuarios           = RASTREADOR WEB - Usuarios
+application.title.importacion        = RASTREADOR WEB - Importar entidades desde el SSP
 
 archivo.existe           = El archivo ya existe.
 archivo.inexistente      = Archivo inexistente.
@@ -264,7 +265,11 @@ cambiar.pass.admin.pass.antiguo      = Password antiguo:
 cambiar.pass.admin.pass.confirmacion = Confirmar password:
 cambiar.pass.admin.pass.nuevo        = Password nuevo:
 cambiar.pass.admin.titulo            = Cambiar Password
-cambiar.pass.admin.usuario           = Usuario:
+cambiar.pass.admin.usuario           = Usuario: 
+
+# Literales importar entidades
+subir.fichero.import                      = Subir fichero:
+subir.fichero.import.campo.file.invalido  = Formato de fichero Inv\u00E1lido. Seleccione un fichero .json
 
 # LITERALES JSP
 campo.obligatorio       = Campo obligatorio
@@ -1224,6 +1229,8 @@ menuadmin.servicio_diagnostico                = Servicio diagn\u00F3stico
 menuadmin.servicio_diagnostico.title          = Acceder a la gesti\u00F3n del servicio de diagn\u00F3stico
 menuadmin.usuarios                            = Usuarios
 menuadmin.usuarios.title                      = Acceder a la parte de gesti\u00F3n de usuarios
+menuadmin.importar.entidades                  = Importar Entidades
+menuadmin.importar.title                      = Acceder a la parte de Importaci\u00F3n de datos del SSP
 
 menuclient.rastreos              = Rastreos de cliente
 menuclient.rastreos.cuenta       = Cuentas de cliente
@@ -1417,6 +1424,8 @@ migas.ver.cuenta.usuario                                 = Ver Cuenta Cliente
 migas.ver.observatorio                                   = Detalles
 migas.ver.rastreo                                        = Ver Rastreo
 migas.ver.usuario                                        = Ver Usuario
+migas.importar.entidad                                   = Importar entidades
+migas.other.options                                      = Otras opciones
 
 minhap.observatory.2_0.subgroup.1.1.1 = 1.1.1 Existencia de alternativas textuales
 minhap.observatory.2_0.subgroup.1.1.2 = 1.1.2 Uso de encabezados
