--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -826,6 +826,18 @@ importar.semillas.info                        = The file has been processed corr
 importar.semillas.info2                       = Do you want to continue with the importNo? The modification/creation of the seeds shall be carried out. This action <strong>cannot be undone</strong>
 importar.semillas.title                       = Mass seed import
 
+importar.entidades.titulo                     = Entity import result
+importar.entidades.exito                      = Successfully imported entities
+importar.entidades.error                      = Error importing entities
+importar.entidades.ambitos                    = Scopes
+importar.entidades.complejidades              = Complexities
+importar.entidades.dependencias               = Dependencies
+importar.entidades.etiquetas                  = Labels
+importar.entidades.segmentos                  = Segments
+importar.entidades.semillas                   = Seeds 
+importar.entidades.tiposEtiqueta              = Label types
+importar.entidades.tiposSemilla               = Seed types
+
 indice.cartuchos.accion.borrar                             = Remove Cartucho
 indice.cartuchos.accion.desinstalar                        = De-installation Cartucho
 indice.cartuchos.accion.instarlar                          = Install Cartucho
