--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -176,6 +176,7 @@ application.title.semillas           = RASTREADOR WEB - Semillas
 application.title.termino.categorias = RASTREADOR WEB - T\u00E9rminos
 application.title.usuarios           = RASTREADOR WEB - Usuarios
 application.title.importacion        = RASTREADOR WEB - Importar entidades desde el SSP
+application.title.exportacion        = RASTREADOR WEB - Exportar entidades desde el Rastreador
 
 archivo.existe           = El archivo ya existe.
 archivo.inexistente      = Archivo inexistente.
@@ -753,7 +754,7 @@ establecer.valores.cartucho.numMax.hilos    = N\u00FAmero m\u00E1ximo de Hilos:
 establecer.valores.cartucho.numMax.rastreos = N\u00FAmero m\u00E1ximo de Rastreos:
 establecer.valores.cartucho.title           = Establecer Valores Cartucho
 
-etitar.semilla.observatorio = Editar Semilla
+editar.semilla.observatorio = Editar Semilla
 
 exito.cartucho             = Cartuchos
 exito.cartucho.informacion = Informaci\u00F3n
@@ -763,11 +764,13 @@ exito.informacion          = Informaci\u00F3n
 export.to.pdf.title                    = Exportar los resultados del rastreo a formato PDF
 
 exportar.resultados.observatorio.title = Exportar los resultados del Observatorio
+exportar.backup.entidades = Generación de backup de entidades
+exportar.entidades.exito               = Entidades exportadas con éxito
 
 fallo.cuenta.cliente = Fallo al crear cuenta cliente.
 fallo.observatorio   = Fallo al crear el obnservatorio.
 
-fichero.conclusiones = Fichero de conclusiones
+fichero.conclusiones = Fichero de conclusiones 
 
 first.level.bs                  = A
 first.level.incidents           = A
@@ -1241,8 +1244,11 @@ menuadmin.servicio_diagnostico                = Servicio diagn\u00F3stico
 menuadmin.servicio_diagnostico.title          = Acceder a la gesti\u00F3n del servicio de diagn\u00F3stico
 menuadmin.usuarios                            = Usuarios
 menuadmin.usuarios.title                      = Acceder a la parte de gesti\u00F3n de usuarios
-menuadmin.importar.entidades                  = Importar Entidades
+menuadmin.backup.entidades                    = Backup Entidades 
+menuadmin.importar.entidades                  = Importar Entidades 
+menuadmin.exportar.entidades                  = Exportar Entidades 
 menuadmin.importar.title                      = Acceder a la parte de Importaci\u00F3n de datos del SSP
+menuadmin.exportar.title                      = Acceder a la parte de Exportaci\u00F3n de datos del Rastreador
 
 menuclient.rastreos              = Rastreos de cliente
 menuclient.rastreos.cuenta       = Cuentas de cliente
@@ -1437,6 +1443,7 @@ migas.ver.observatorio                                   = Detalles
 migas.ver.rastreo                                        = Ver Rastreo
 migas.ver.usuario                                        = Ver Usuario
 migas.importar.entidad                                   = Importar entidades
+migas.exportar.entidad                                   = Exportar entidades
 migas.other.options                                      = Otras opciones
 
 minhap.observatory.2_0.subgroup.1.1.1 = 1.1.1 Existencia de alternativas textuales
