[#5551] Aggregate report and Global report bad data last iteration

--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -1224,6 +1224,7 @@ menuadmin.servicio_diagnostico                = Diagnostic service
 menuadmin.servicio_diagnostico.title          = Access the management of the diagnostic service
 menuadmin.usuarios                            = Users
 menuadmin.usuarios.title                      = Access the user management part
+menuadmin.backup.entidades                    = Backup Entities
 menuadmin.importar.entidades                  = Importing Entities
 menuadmin.exportar.entidades                  = Exporting Entities
 menuadmin.importar.title                      = Access the management of the SSP data Importation
