New ranges calculation

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -406,15 +406,20 @@ colname.go                 = Ir
 colname.historic           = Hist\u00F3rico
 colname.id                 = ID
 colname.level              = Nivel de accesibilidad
-colname.max.value          = Valor superior
-colname.max.value.operator = Operador superior
-colname.min.value          = Valor inferior
-colname.min.value.operator = Operador inferior
+colname.max.value          = Valor sup
+colname.max.value.operator = Op sup
+colname.min.value          = Valor inf
+colname.min.value.operator = Op inf
+colname.max.position.value          = Posici\u00F3n sup 
+colname.max.position.value.operator = Op sup
+colname.min.position.value          = Posici\u00F3n inf
+colname.min.position.value.operator = Op inf
 colname.name               = Nombre
 colname.observations       = Observaciones
 colname.official           = Oficial
 colname.oldname            = Nombre antiguo
 colname.password           = Contrase\u00F1a
+colname.position           = Posici\u00F3n
 colname.province           = Provincia
 colname.puntuaction        = Puntuaci\u00F3n
 colname.range              = Rango
