--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -394,14 +394,19 @@ colname.go                 = Go
 colname.historic           = Historic
 colname.id                 = ID
 colname.level              = Accessibility level
-colname.max.value          = Valor superior
-colname.max.value.operator = Operador superior
-colname.min.value          = Valor inferior
-colname.min.value.operator = Operador inferior
+colname.max.value          = Upp value 
+colname.max.value.operator = Upp op
+colname.min.value          = Low value
+colname.min.value.operator = Low op
+colname.max.position.value          = Position upp 
+colname.max.position.value.operator = Op upp
+colname.min.position.value          = Position low
+colname.min.position.value.operator = Op low
 colname.name               = Name
 colname.observations       = Observations
 colname.official           = Oficial
 colname.oldname            = Old name
+colname.position           = Position
 colname.province           = Province
 colname.puntuaction        = Score
 colname.range              = Range
