New ranges calculation

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -424,6 +424,9 @@ colname.province           = Provincia
 colname.puntuaction        = Puntuaci\u00F3n
 colname.range              = Rango
 colname.range.score        = Puntuaci\u00F3n de Evoluci\u00F3n
+colname.range.score.abb    = Evoluci\u00F3n
+colname.range.position     = Puntaci\u00F3n de Posici\u00F3n
+colname.range.position.abb = Posici\u00F3n
 colname.relaunch           = Relanzar
 colname.remove             = Eliminar
 colname.remove.permanently = Eliminar definitivamente
