Fixing apikeys load

--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -1234,6 +1234,8 @@ menuadmin.importar.entidades                  = Importing Entities
 menuadmin.exportar.entidades                  = Exporting Entities
 menuadmin.importar.title                      = Access the management of the SSP data Importation
 menuadmin.exportar.title					  = Access the management of the SSP data Exportation
+menuadmin.apikeys.title                       = Apikeys 
+menuadmin.apikeys                             = Apikeys      
 
 menuclient.rastreos              = Customer sweeps
 menuclient.rastreos.cuenta       = Client accounts
