--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -1257,6 +1257,8 @@ menuadmin.importar.entidades                  = Importar Entidades
 menuadmin.exportar.entidades                  = Exportar Entidades 
 menuadmin.importar.title                      = Acceder a la parte de Importaci\u00F3n de datos del SSP
 menuadmin.exportar.title                      = Acceder a la parte de Exportaci\u00F3n de datos del Rastreador
+menuadmin.apikeys.title                       = Gestión de apikeys 
+menuadmin.apikeys                             = Gestión de apikeys 
 
 menuclient.rastreos              = Rastreos de cliente
 menuclient.rastreos.cuenta       = Cuentas de cliente
