Añadido campo apiKey, cadenas en las propiedades

--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -1668,6 +1668,14 @@ nueva.etiqueta.observatorio.modal.title            = CRAWLER - New label
 nueva.etiqueta.observatorio.nombre                 = Tag name
 nueva.etiqueta.observatorio.recurrencia            = Recurrence
 nueva.etiqueta.observatorio.tematica               = TATIC
+nueva.apiKey                                       = New apiKey
+nueva.apiKey.descripcion                           = Description
+nueva.apiKey.modal.eliminar.confirm                = Do you want to remove the apiKey? 
+nueva.apiKey.modal.eliminar.title                  = RASTREADOR WEB - Delete apiKey
+nueva.apiKey.modal.title                           = RASTREADOR WEB - New apiKey
+nueva.apiKey.nombre                                = ApiKey name
+nueva.apiKey.apiKey                                = ApiKey
+nueva.apiKey.tipo                                  = ApiKey type
 nueva.plantilla.observatorio                       = New template
 nueva.plantilla.observatorio.fichero               = File
 nueva.plantilla.observatorio.nombre                = Template name
