--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -1702,10 +1702,10 @@ nueva.apiKey.modal.eliminar.title                  = RASTREADOR WEB - Eliminar a
 nueva.apiKey.modal.title                           = RASTREADOR WEB - Nueva apiKey
 nueva.apiKey.nombre                                = Nombre de la apiKey
 nueva.apiKey.apiKey                                = ApiKey
-nueva.apiKey.tipo                                  = Tipo de apiKey
+nueva.apiKey.activa                                = Activa
 nueva.apiKey.modal.nombre                          = Nombre
-nueva.apiKey.modal.tipo                            = Tipo
 nueva.apiKey.modal.descripcion                     = Descripcion
+nueva.apiKey.modal.activa                          = Activa
 nueva.plantilla.observatorio                       = Nueva plantilla
 nueva.plantilla.observatorio.fichero               = Fichero
 nueva.plantilla.observatorio.nombre                = Nombre de la plantilla
