--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -1098,7 +1098,9 @@ mensaje.error.nombre.complejidad.obligatorio                  = All fields are m
 mensaje.error.nombre.dependencia.duplicado                    = Existing dependency name
 mensaje.error.nombre.dependencia.obligatorio                  = Dependency name is required
 mensaje.error.nombre.etiqueta.duplicado                       = Already existing label name
+mensaje.error.nombre.apikey.duplicado                         = Apikey name already exists
 mensaje.error.nombre.etiqueta.obligatorio                     = The name of the label is mandatory
+mensaje.error.nombre.apikey.obligatorio                       = The name of the apikey is mandatory
 mensaje.error.nombre.plantilla.duplicado                      = A template with the same name already exists
 mensaje.error.nombre.plantilla.obligatorio                    = Template name is required
 mensaje.error.plantilla.obligatorio                           = Template is required
@@ -1136,6 +1138,9 @@ mensaje.exito.dependencia.eliminada                           = Dependence away 
 mensaje.exito.dependencia.generada                            = Successfully generated dependency
 mensaje.exito.etiqueta.eliminada                              = Label successfully removed.
 mensaje.exito.etiqueta.generada                               = Label successfully produced.
+mensaje.exito.apikey.eliminada                                = ApiKey removed succesfully
+mensaje.exito.apikey.editada                                  = ApiKey edited successfully
+mensaje.exito.apikey.generada                                 = ApiKey generated successfully
 mensaje.exito.nueva.cuenta                                    = New Client Account was successfully created.
 mensaje.exito.nueva.cuenta.error.job                          = The new customer account has been successfully created, but the tracking planning has failed.
 mensaje.exito.observatorio                                    = New Observatory successfully created.
