Arreglos de nombres, cadenas, etc.

--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -1393,6 +1393,7 @@ migas.nuevo.usuario                                      = New User
 migas.nuevo.usuario.cliente                              = New customer user
 migas.nuevo.usuario.observatorio                         = New Observatory User
 migas.observatorio                                       = Observatories
+migas.apiKey                                             = ApiKeys
 migas.plantillas.observatorio                            = Templates
 migas.ranges.observatorio                                = Rangos
 migas.rangoIp                                            = IP Range
