--- a/portal/src/main/resources/__ApplicationResources_es_CA.properties
+++ b/portal/src/main/resources/__ApplicationResources_es_CA.properties
@@ -744,7 +744,7 @@ gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del O
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
 gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
-gestion.apikeys.observatorio.titulo         = Gesti\u00F3n de ApiKeys del Observatorio
+gestion.apikeys.titulo                      = Gesti\u00F3n de ApiKeys
 gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
 gestion.reducirtablas.observatorio.titulo   = Reducci\u00F3n de Tablas del Observatorio
 gestion.resultados.observatorio             = Resultados Observatorio
@@ -1307,6 +1307,7 @@ migas.nuevo.usuario                                      = Nuevo Usuario
 migas.nuevo.usuario.cliente                              = Nuevo Usuario Cliente
 migas.nuevo.usuario.observatorio                         = Nuevo Usuario Observatorio
 migas.observatorio                                       = Observatorios
+migas.apiKey                                             = ApiKeys
 migas.plantillas.observatorio                            = Plantillas
 migas.rangoIp                                            = Rango IP
 migas.rastreo                                            = Rastreos
