--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -805,7 +805,7 @@ gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del O
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
 gestion.plantillas.observatorio.info.ira    = Actualmente desde esta secci\u00F3n se pueden gestionar las plantillas ods y xlsx de los <strong>Informe Revision Profundidad</strong> que pueden ser generados por el Servicio de Diagn\u00F3stico. Para ello es necesario crear (si no existe) una plantilla del tipo <em>ods</em> y otra del tipo <em>xlsx</em>. Estos tipos s\u00F3lo se usar\u00E1n en la generaci\u00F3n de los <em>Informe Revision Profundidad</em> y <strong>s\u00F3lo se permite la creaci\u00F3n de una plantilla de cada uno de estos tipos</strong>.
 gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
-gestion.apikeys.observatorio.titulo         = Gesti\u00F3n de ApiKeys del Observatorio
+gestion.apikeys.titulo                      = Gesti\u00F3n de ApiKeys
 gestion.ranges.observatorio.titulo          = Gesti\u00F3n de rangos de comparaci\u00F3n de evoluci\u00F3n a nivel de sitio web
 gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
 gestion.reducirtablas.observatorio.titulo   = Reducci\u00F3n de Tablas del Observatorio
@@ -1417,6 +1417,7 @@ migas.nuevo.usuario                                      = Nuevo Usuario
 migas.nuevo.usuario.cliente                              = Nuevo Usuario Cliente
 migas.nuevo.usuario.observatorio                         = Nuevo Usuario Observatorio
 migas.observatorio                                       = Observatorios
+migas.apiKey                                             = ApiKeys
 migas.plantillas.observatorio                            = Plantillas
 migas.ranges.observatorio                                = Rangos
 migas.rangoIp                                            = Rango IP
